tests/NormalTests/paczka1/small_fuzzy/94754037.err
Error in line 7: mIsJfXY0 A124 47,0
Error in line 1: Eia62b A124 98,3
Error in line 13: n09SpSuy5 A215 95,3
